fix subscribe button positioning on mobile

--- a/civictechprojects/static/css/partials/_SocialFooter.scss
+++ b/civictechprojects/static/css/partials/_SocialFooter.scss
@@ -47,8 +47,10 @@
   margin-bottom: 1.5rem;
 }
 .SocialFooter-signupcontainer input[type=submit] {
-  margin: 0.5rem 0 0 0;
+  display: block;
+  margin: 0.5rem auto;
 }
+
 @include media-breakpoint-up(sm) {
   .SocialFooter-btn-about {
     margin-right: 1rem;
@@ -76,6 +78,9 @@
   .SocialFooter-newsletter {
     margin-left: auto;
   }
+  .SocialFooter-signupcontainer input[type=submit] {
+    margin: 0.5rem 0;
+  }
 }
 @include media-breakpoint-up(lg) {
   .SocialFooter-box {
@@ -92,6 +97,7 @@
     height: 2.25rem;
   }
   .SocialFooter-signupcontainer input[type=submit] {
+    display: inline-block;
     margin: 0 0 0 1rem;
   }
 }
